# mailcrew

./: LICENSE  readme.md
api/: Makefile  api.knowledge.md  dotenv.example  pyproject.toml
api/app/: agent.py  main.py
